syntax = "proto3";
package Handin5;

option go_package = "github.com/SpaceVikingEik/Handin5";

/*protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative chat.proto*/

message BidMessage{
    int32 clientID = 1;
    int32 bid = 2;
}

message Ack{
    string response = 1;
    //fail, success or exception
}

message Request{
    int32 clientID = 1;
}

message ResultReply{
    bool auctionOver = 1;
    int32 highestBid = 2;
}

service Services{
    //rpc ChatService(stream FromClient) returns (stream FromServer){};
    //server skal vel ikke modtage/sende stream? bare én besked af gangen
    rpc Bid(BidMessage) returns (Ack){};
    rpc Result(Request) returns (ResultReply){};
}
